# AdventOfCode2022

./: .gitignore  CMakeLists.txt  day1-calorie-counting-2.cc  day1-calorie-counting.cc  day2-helper.hh  day2-rock-paper-scissors-2.cc  day2-rock-paper-scissors.cc  day3-rucksack-2.cc  day3-rucksack.cc  day4-camp-cleanup.cc  day5-supply-stacks.cc  day6-tuning-trouble.cc  helper.cc  helper.hh
